# GPUFastQ

./: .gitignore  CMakeLists.txt  command.readme
include/gpufastq/: codec_bsc.hpp  codec_gpu.cuh  compression_workflow.hpp  decompression_workflow.hpp  fastq_parser.hpp  fastq_record.hpp  gpu_compressor.hpp  serializer.hpp
psz/src/utils/: verinfo_nv.cu
src/: codec_bsc.cpp  codec_gpu.cu  compression_workflow.cpp  decompression_workflow.cpp  fastq_parser.cpp  gpu_compressor.cu  main.cpp  main_indexing_cuda.cu  serializer.cpp
